--- a/src/sass/_ui.scss
+++ b/src/sass/_ui.scss
@@ -438,10 +438,14 @@ img {
     //     @include fz(14); 
     //     padding: 18px 26px;
     //   }
-      @media (max-width: 1024px) {
-        @include fz(15); 
-        padding: 16px 20px;
-      }
+		@media (max-width: 1366px) {
+			@include fz(16); 	
+			padding: 20px 30px;		
+      	}   
+		@media (max-width: 1024px) {
+			@include fz(14); 
+			padding: 14px 20px;
+		}
     //   @media (max-width: 992px) {
     //     @include fz(12); 
     //     padding: 12px 20px;
@@ -476,24 +480,24 @@ img {
       resize: none;
       outline: none;   
       @media (max-width: 1366px) {
-        @include fz(14); 
+        @include fz(16); 
         padding: 18px 26px;
       }   
       @media (max-width: 1024px) {
-        @include fz(12); 
+        @include fz(14); 
         padding: 12px 20px;
       }
       @media (max-width: 992px) {
-        @include fz(12); 
+        // @include fz(12); 
         padding: 12px 20px;
       }
       @media (max-width: 768px) {
-        @include fz(18); 
-        padding: 18px 26px;
+        // @include fz(18); 
+        padding: 18px 20px;
         // min-height: 90px;
       }
       @media (max-width: 480px) {
-        @include fz(12); 
+        // @include fz(12); 
         padding: 12px 20px;
         // min-height: 80px;
       }
