--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -3526,10 +3526,10 @@
       padding: 90px 90px 108px;
     }
     @media (max-width: 1366px) {
-      padding: 80px 80px 90px;
+      padding: 60px 80px 70px;
     }
     @media (max-width: 1140px) {
-      padding: 50px 50px 60px;
+      padding: 50px 50px 50px;
     }
     @media (max-width: 1024px) {
       padding: 50px 50px 60px;
@@ -3574,7 +3574,7 @@
         margin-bottom: 30px;
       }
       @media (max-width: 1024px) {
-        @include fz(22);      
+        @include fz(20);      
         margin-bottom: 40px;
       }
       // @media (max-width: 992px) {
@@ -3609,32 +3609,38 @@
   &-left {
     width: 50%;
     padding-right: 20px;
-    margin-bottom: 60px;
+    margin-bottom: 20px;
     @media (max-width: 1366px) {
-      margin-bottom: 50px;
+      // margin-bottom: 50px;
+    }
+    @media (max-width: 1024px) {
+      padding-right: 12px;
     }
     @media (max-width: 992px) {
-      margin-bottom: 30px;
+      // margin-bottom: 30px;
     }
     
     @media (max-width: 768px) {
       padding-right: 0;
       width: 100%;
-      margin-bottom: 16px;
+      // margin-bottom: 16px;
     }    
   }
   &-right {
     width: 50%;
     padding-left: 20px;
-    margin-bottom: 60px;
+    margin-bottom: 20px;
     .ui-field {
       height: 100%;
     }
     @media (max-width: 1366px) {
-      margin-bottom: 50px;
+      // margin-bottom: 50px;
+    }
+    @media (max-width: 1024px) {
+      padding-left: 12px;
     }
     @media (max-width: 992px) {
-      margin-bottom: 30px;
+      // margin-bottom: 30px;
     }
     @media (max-width: 768px) {
       min-height: 207px;
@@ -3643,12 +3649,31 @@
       width: 100%;
     }    
   } 
+  &-confirm {
+    font-family: $inter;
+    @include fz(14);
+    font-weight: 400;
+    margin-bottom: 40px;
+    @media (max-width: 1366px) {
+      @include fz(13);
+      margin-bottom: 30px;
+    }   
+    @media (max-width: 599px) {
+      margin-bottom: 20px;
+    }
+    label {
+      a {
+      color: #5E6738;
+      text-decoration: underline;
+      }
+    }
+  }
   &-bottom {
     width: 100%;
     position: relative;
     display: flex;
     align-items: center;
-    justify-content: center;
+    // justify-content: center;
     flex-wrap: wrap;
     gap: 30px;
     @media (max-width: 1024px) {
@@ -4642,5 +4667,32 @@
 
   .next.disabled {
     opacity: 0.6;
+  }
+}
+
+
+.jq-checkbox {
+  width: 16px;
+  height: 16px;
+  border: 1px solid #D2D2D2;
+  border-radius: 3px;
+  cursor: pointer;
+  margin-right: 6px;
+  position: relative;
+  top: 3px;
+  &.checked {
+    position: relative;
+    border-color: #218DF1;
+    &::after {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      content: '';
+      background-color: #218DF1;
+      border-radius: 2px;
+      width: 12px;
+      height: 12px;
+    } 
   }
 }
