--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6710,11 +6710,13 @@ img {
   background-color: #fff;
   color: #23372B;
   padding: 60px;
+  padding-bottom: 40px;
   border-radius: 10px;
 }
 @media (max-width: 1680px) {
   .mfp-popup-inner {
     padding: 40px;
+    padding-bottom: 30px;
   }
 }
 
@@ -6973,7 +6975,7 @@ img {
   background-color: #5E6738;
 }
 .popup-presents .popup-text {
-  margin-bottom: 24px;
+  margin-bottom: 40px;
 }
 .popup-presents .popup-button {
   width: 100%;
@@ -6984,6 +6986,10 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 @media (max-width: 768px) {
   .popup-presents .presents-cards {
@@ -6994,12 +7000,47 @@ img {
   }
 }
 .popup-presents .presents-cards-col {
-  width: 33.33%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
 }
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   .popup-presents .presents-cards-col {
-    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
+}
+.popup-presents .presents-cards-wrapper {
+  border-top: 1px solid #DEDEDE;
+  position: relative;
+  padding-top: 30px;
+  padding-bottom: 10px;
+}
+.popup-presents .presents-cards-wrapper .stage-title {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding-left: 12px;
+  padding-right: 12px;
+}
+.popup-presents .presents-cards-wrapper .stage-title span {
+  color: #FFF;
+  font-size: 24px;
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 135%;
+  /* 32.4px */
+  text-transform: uppercase;
+  border-radius: 33px;
+  background: #C74403;
+  padding: 2px 10px 1px 10px;
 }
 .popup-presents .presents-card {
   position: relative;
@@ -7010,18 +7051,27 @@ img {
       -ms-flex-align: center;
           align-items: center;
   margin-bottom: 24px;
+  width: 33.33%;
 }
 @media (max-width: 1680px) {
   .popup-presents .presents-card {
     margin-bottom: 18px;
   }
 }
+@media (max-width: 992px) {
+  .popup-presents .presents-card {
+    width: 100%;
+  }
+}
 .popup-presents .presents-card-image {
+  position: relative;
   width: 56px;
   height: 56px;
   background-color: #5E6738;
   border-radius: 50%;
   margin-right: 14px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
 }
 @media (max-width: 1680px) {
   .popup-presents .presents-card-image {
@@ -7044,10 +7094,10 @@ img {
 }
 .popup-presents .presents-card-info__title {
   color: #23372B;
-  font-size: 18px;
-  font-size: 1.125rem;
+  font-size: 15px;
+  font-size: 0.9375rem;
   font-family: "Inter";
-  font-weight: 700;
+  font-weight: 500;
   line-height: 145%;
 }
 @media (max-width: 1680px) {
@@ -7058,8 +7108,8 @@ img {
 }
 .popup-presents .presents-card-info__rating {
   color: #B08036;
-  font-size: 15px;
-  font-size: 0.9375rem;
+  font-size: 14px;
+  font-size: 0.875rem;
   font-family: "Inter";
   font-weight: 500;
   line-height: 145%;
