--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -3870,9 +3870,11 @@
   background-color: #fff;
   color: $bgc;
   padding: 60px;
+  padding-bottom: 40px;
   border-radius: 10px;
   @media (max-width: 1680px) {
     padding: 40px;
+    padding-bottom: 30px;
   }
 }
 
@@ -4105,7 +4107,7 @@
     }
   }
   .popup-text {
-    margin-bottom: 24px;
+    margin-bottom: 40px;
   }
 
   .popup-button {
@@ -4116,31 +4118,78 @@
 
   .presents-cards {
     display: flex;
+    flex-direction: column;
     @media (max-width: 768px) {
       flex-direction: column;
     }
     &-col {
-      width: 33.33%;
-      @media (max-width: 768px) {
-        width: 100%;
+      // width: 33.33%;
+      // @media (max-width: 768px) {
+      //   width: 100%;
+      // }
+      display: flex;
+      gap: 20px;
+      @media (max-width: 992px) {
+        flex-direction: column;
+        // align-items: center;
+      }
+    }
+    &-wrapper {
+      border-top: 1px solid #DEDEDE;
+      position: relative;
+      padding-top: 30px;
+      padding-bottom: 10px;
+      .stage-title {
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        // color: #FFF;
+        // @include fz(24);        
+        // font-weight: 700;
+        // line-height: 135%; /* 32.4px */
+        // text-transform: uppercase;
+        // border-radius: 33px;
+        // background: #C74403;
+        // padding: 2px 10px 1px 10px;
+        background-color: #fff;
+        padding-left: 12px;
+        padding-right: 12px;        
+        span {         
+          color: #FFF;
+          @include fz(24);        
+          font-weight: 700;
+          line-height: 135%; /* 32.4px */
+          text-transform: uppercase;
+          border-radius: 33px;
+          background: #C74403;
+          padding: 2px 10px 1px 10px;
+        }
       }
     }
   }
+ 
 
   .presents-card {
     position: relative;
     display: flex;
     align-items: center;
     margin-bottom: 24px;
+    width: 33.33%;
     @media (max-width: 1680px) {
       margin-bottom: 18px;
     }
+    @media (max-width: 992px) {
+      width: 100%;
+    }
     &-image {
+      position: relative;
       width: 56px;
       height: 56px;
       background-color: #5E6738;
       border-radius: 50%;
       margin-right: 14px;
+      flex-shrink: 0;
       @media (max-width: 1680px) {
         width: 48px;
         height: 48px;
@@ -4162,9 +4211,9 @@
   .presents-card-info {
     &__title {
       color: #23372B;      
-      @include fz(18);
+      @include fz(15);
       font-family: $inter;
-      font-weight: 700;
+      font-weight: 500;
       line-height: 145%;
       @media (max-width: 1680px) {
         @include fz(14);
@@ -4172,7 +4221,7 @@
     }
     &__rating {
       color: #B08036;  
-      @include fz(15);
+      @include fz(14);
       font-family: $inter;
       font-weight: 500;
       line-height: 145%;
