--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -109,6 +109,12 @@
     padding-bottom: 10px;
   }  
 
+  // &.about {
+  //   @media (max-width: 1024px) {
+  //     min-height: 100vh;
+  //   }
+  // }
+
   .container {
     width: 100%;
     &.mobile {
@@ -163,6 +169,29 @@
       // top: unset;
       // bottom: 180px;
       position: static;
+    }
+
+    &.about {
+      img {
+        @media (max-width: 1024px) {
+          height: 66%;
+          margin-left: 0;
+        }
+        @media (max-width: 959px) {
+          height: 96%;
+        }
+        @media (max-width: 768px) {
+          object-fit: contain;
+          height: 86%;
+          margin-left: auto;
+          margin-right: auto;
+          height: auto;
+          width: 90vw;
+        }
+        @media (max-width: 599px) {        
+          width: 98vw;
+        }
+      }
     }
 
     .row {
@@ -876,6 +905,8 @@
   opacity: 0;
   overflow-y: auto;
   background: radial-gradient(36.82% 70.7% at 50% 29.3%, rgba(255, 248, 217, 0.07) 0%, rgba(0, 0, 0, 0) 100%), #23372B;
+  background-size: cover;
+  background-position: center;
 
   &.visible {
     opacity: 1;
@@ -962,12 +993,11 @@
       @include fz(16);     
       margin-bottom: 26px;  
     }
-    @media (max-width: 768px) {
-      @include fz(12); 
+    @media (max-width: 768px) {    
       margin-bottom: 22px;    
     }
     @media (max-width: 599px) {
-      @include fz(12);      
+      @include fz(16);      
     }
   }
 
@@ -1022,6 +1052,8 @@
   &-no__confirm {
     position: absolute;
     top: 50%;   
+    left: 50%;
+    transform: translateX(-50%);
     @include fz(80);
     line-height: 130%;
     font-weight: 700;
@@ -1043,6 +1075,7 @@
     @media (max-width: 599px) {
       @include fz(32);    
       max-width: 90%;  
+      width: 90%;
     }
     &.hidden {
       display: none;
@@ -1271,7 +1304,35 @@
       @media (max-width: 768px) {
         margin-bottom: 0;
       }
-
+      &.about {
+        @include fz(56);
+        @media (max-width: 1680px) {
+          @include fz(42);
+        }
+      
+        @media (max-width: 1366px) {
+          @include fz(36);
+        }
+      
+        @media (max-width: 1140px) {
+          @include fz(28);
+        }
+      
+        @media (max-width: 959px) {
+          @include fz(32);
+          line-height: 1.1;
+        }
+      
+        @media (max-width: 768px) {
+          @include fz(36);
+          line-height: 1.1;
+        }
+      
+        @media (max-width: 599px) {
+          @include fz(24);
+          line-height: 1.14;
+        }
+      }
     }
     &-question {
       font-family: $inter;
@@ -4734,17 +4795,166 @@
   top: 3px;
   &.checked {
     position: relative;
-    border-color: #218DF1;
+    border-color: #C74403 ;
     &::after {
       position: absolute;
       left: 50%;
       top: 50%;
       transform: translate(-50%, -50%);
       content: '';
-      background-color: #218DF1;
+      background-color: #C74403 ;
       border-radius: 2px;
       width: 12px;
       height: 12px;
     } 
+  }
+}
+
+
+.screen-goals {
+  background: url(../images/goals-mask.svg), radial-gradient(36.82% 70.7% at 50% 29.3%, rgba(255, 248, 217, 0.07) 0%, rgba(0, 0, 0, 0) 100%), #23372B;
+  position: relative;
+  // height: 100vh;
+  // background-image: url(../images/form-mask-bg.svg), url(../images/form-contest-bg.jpg);
+  background-repeat: no-repeat;
+  background-position: bottom left;
+  background-size: contain;  
+  padding-top: 50px;
+  padding-bottom: 50px; 
+  display: flex;
+  align-items: center;
+  min-height: 100vh;
+  @media (max-width: 1366px) {   
+    padding-bottom: 36px;
+  }
+  @media (max-width: 1024px) {
+    flex-direction: column;
+    scroll-snap-align: unset;
+    min-height: unset;
+    padding-bottom: 10px;
+    overflow: unset;
+  }
+
+  // @media (max-width: 1024px) {
+  //   flex-direction: column;
+  //   justify-content: center;
+  //   scroll-snap-align: unset;
+  //   min-height: unset;
+  //   padding-top: 150px;
+  //   padding-bottom: 10px;
+  //   overflow: unset;
+  // }
+
+  @media (max-width: 768px) {
+    max-height: unset;
+    height: max-content;
+    padding-bottom: 60px;
+    background-size: cover; 
+  }  
+  @media (max-width: 599px) {   
+    padding-bottom: 10px;
+  }  
+
+  .row {
+    .bottles {
+      @media (max-width: 768px) {
+        order: 1;
+      }
+    }
+    @media (max-width: 768px) {
+      flex-direction: column;
+    }
+  }
+
+  .goals-text {
+    @include fz(56);
+    font-weight: 400;
+    line-height: 125%;
+    text-transform: uppercase;
+    @media (max-width: 1680px) {
+      @include fz(42);
+    }
+  
+    @media (max-width: 1366px) {
+      @include fz(38);
+    }
+  
+    @media (max-width: 1140px) {
+      @include fz(32);
+    }
+  
+    @media (max-width: 959px) {
+      @include fz(32);
+      line-height: 1.1;
+    }
+  
+    @media (max-width: 768px) {
+      @include fz(38);
+      line-height: 1.1;
+    }
+  
+    @media (max-width: 599px) {
+      @include fz(28);
+      line-height: 1.14;
+    }
+  }
+}
+
+.screen-motto {
+  background: radial-gradient(36.82% 70.7% at 50% 29.3%, rgba(255, 248, 217, 0.07) 0%, rgba(0, 0, 0, 0) 100%), #23372B;
+  position: relative;
+  background-repeat: no-repeat;
+  background-position: bottom left;
+  background-size: contain;  
+  padding-top: 50px;
+  padding-bottom: 50px; 
+  display: flex;
+  align-items: center;
+  min-height: 100vh;
+  @media (max-width: 1366px) {   
+    padding-bottom: 36px;
+  }
+  @media (max-width: 1024px) {
+    flex-direction: column;
+    scroll-snap-align: unset;
+    min-height: unset;
+    padding-bottom: 10px;
+    overflow: unset;
+  }
+  @media (max-width: 768px) {
+    max-height: unset;
+    height: max-content;
+    padding-bottom: 60px;
+  }  
+  @media (max-width: 599px) {   
+    padding-bottom: 10px;
+  }  
+
+  &-wrapper {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 100%;
+    .row {
+      height: 100%;
+    }
+    img {
+      height: 100%;
+      width: auto;
+      max-width: unset;
+    }
+  }
+  // &-text {
+  //   justify-content: flex-end;
+  // }
+
+  .motto-text {
+    @include fz(64);
+    font-weight: 400;
+    line-height: 125%;
+    text-transform: uppercase;
+    span {
+      font-weight: 700;
+    }
   }
 }
