--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -4257,13 +4257,14 @@
       }
       img {
         position: absolute;
-        width: 56px;
-        height: 56px;
-        top: -10px;
+        width: 32px;
+        height: 32px;       
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         @media (max-width: 1680px) {
-          width: 48px;
-          height: 48px;
-          top: -8px;
+          width: 26px;
+          height: 26px;          
         }
       }    
     }
@@ -4471,7 +4472,7 @@
 
     &-navigation {
       position: relative;
-      z-index: 6;
+      z-index: 1;
       @media (max-width: 1024px) {
         position: absolute;
         top: 80px;
@@ -4932,7 +4933,7 @@
 
   &-wrapper {
     position: absolute;
-    left: 0;
+    right: 0;
     bottom: 0;
     height: 100%;
     .row {
@@ -4958,3 +4959,14 @@
     }
   }
 }
+
+.screen-header.about {
+  @media (max-width: 1024px) {
+    height: max-content;
+    background-color: rgba(0, 0, 0, 0.1);
+  }  
+  @media (max-width: 768px) {
+    background-color: transparent;
+  }
+}
+
