--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7320,6 +7320,7 @@ img {
   background-position: center;
   background-size: cover;
   position: relative;
+  z-index: 2;
 }
 @media (max-width: 1024px) {
   .screen-slider {
@@ -8091,6 +8092,7 @@ img {
     background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), color-stop(47.92%, rgba(0, 0, 0, 0.272)), to(rgba(0, 0, 0, 0)));
     background: -o-linear-gradient(top, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.272) 47.92%, rgba(0, 0, 0, 0) 100%);
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.272) 47.92%, rgba(0, 0, 0, 0) 100%);
+    z-index: 9;
   }
 }
 /*# sourceMappingURL=sourcemaps/style.css.map */
