--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -4409,6 +4409,7 @@
   background-position: center;
   background-size: cover;
   position: relative;
+  z-index: 2;
   @media (max-width: 1024px) {
     padding-bottom: 10px;
   }
@@ -5043,10 +5044,11 @@
     height: max-content;
     background-color: rgba(0, 0, 0, 0.1);
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.272) 47.92%, rgba(0, 0, 0, 0.00) 100%);
+    z-index: 9;
 
   }  
   @media (max-width: 768px) {
-    // background-color: transparent;
+    // background-color: transparent;   
   }
 }
 
