--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8222,6 +8222,30 @@ img {
   }
 }
 
+.screen-header.about .header-flex {
+  height: 14vh;
+}
+@media (max-width: 1024px) {
+  .screen-header.about .header-flex {
+    height: unset;
+  }
+}
+.screen-header.about .header-logo {
+  display: none;
+}
+@media (max-width: 1024px) {
+  .screen-header.about .header-logo {
+    display: block;
+  }
+}
+.screen-header.about .header-nav {
+  margin-left: 0;
+}
+@media (max-width: 1024px) {
+  .screen-header.about .header-nav {
+    margin-left: 65px;
+  }
+}
 @media (max-width: 1024px) {
   .screen-header.about {
     height: -webkit-max-content;
