--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -4061,6 +4061,12 @@
   opacity: 1;
   color: #fff;
   font-size: 0; 
+  @media (max-width: 768px) {
+    top: 8px;
+    right: 8px;
+    width: 38px;
+    height: 38px;   
+  }
  
   &::after {
     position: absolute;
